--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 ext {
     set('springCloudVersion', "2022.0.3")
+    set('testcontainersVersion', "1.17.3")
 }
 
 dependencies {
@@ -29,18 +30,22 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    implementation 'org.flywaydb:flyway-core'
     runtimeOnly 'org.postgresql:postgresql'
 
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+    testImplementation 'org.testcontainers:postgresql'
 }
 
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:" +
                 "spring-cloud-dependencies:${springCloudVersion}"
+        mavenBom "org.testcontainers:" +
+                "testcontainers-bom:${testcontainersVersion}"
     }
 }
 
